--- a/templates/parallel_page.html
+++ b/templates/parallel_page.html
@@ -85,7 +85,7 @@
             </div>
             <div class="col-md-3">
                 <div class="well">
-                    sidebar
+                    {% include "dictionary.html" %}
                 </div>
             </div>
         </div>
