First version of dictionary (without tags)

--- a/css/parallel_page.css
+++ b/css/parallel_page.css
@@ -6,17 +6,8 @@
     width: 100%;
 }
 
-.sis-dictionary .search-results {
+.sis-dictionary .search-results-table {
     width: 100%;
     margin-top: 10px;
-    /*padding: 10px;*/
-}
-
-.sis-dictionary .search-results .word {
-    /*width: 50%;*/
-}
-
-.sis-dictionary .search-results .translation {
-    /*width: 49%;*/
-    /*text-align: right;*/
+    background: white;
 }
