--- a/templates/dictionary.html
+++ b/templates/dictionary.html
@@ -2,12 +2,11 @@
     <h4><b>Словарь</b></h4>
     <input type="text" class="search-field" value="" placeholder="введите подстроку">
     <div class="search-controls"></div>
-    <!--<div class="search-results well" style="background: white">-->
-    <table class="search-results table" style="background: white">
-        <tr><td class="word">word</td><td class="translation">слово</td></tr>
-        <tr><td class="word">noun</td><td class="translation">существительное</td></tr>
-
-        <!--<div class="translation pull-right">перевод</div><div class="word">Word</div>-->
+    <table class="search-results-table table">
+        <tbody class="search-results">
+            <tr><td class="word">word</td><td class="translation">слово</td></tr>
+            <tr><td class="word">noun</td><td class="translation">существительное</td></tr>
+        </tbody>
     </table>
     <!--</div>-->
 </div>
