--- a/templates/parallel_page.html
+++ b/templates/parallel_page.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <a href="a/">
                     <div class="btn btn-primary btn-lg results-btn">
                         <h4><b>Общая таблица результатов</b></h4>
@@ -83,7 +83,7 @@
                 </div>
                 {%endfor%}
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="well">
                     {% include "dictionary.html" %}
                 </div>
@@ -92,5 +92,6 @@
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/dictionary.js"></script>
 </body>
 </html>
