Dictionary: merge duplicates, show only specified tags

--- a/templates/parallel_page.html
+++ b/templates/parallel_page.html
@@ -93,5 +93,8 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/dictionary.js"></script>
+    <script type="text/javascript">
+        dictionary.load({{dictionary_shown_tags}});
+    </script>
 </body>
 </html>
