--- a/templates/parallel_page.html
+++ b/templates/parallel_page.html
@@ -16,15 +16,15 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="well" style="margin-top:20px">
-                    <div class="row-fluid">
-                        <div>
-                            <h1>
+                <div class="header well">
+                    <!--<div class="row-fluid">-->
+                        <!--<div>-->
+                            <h2>
                                 ЛКШ.{{year}}.{{month}}.{{parallel_name}}
-                            </h1>
-                        </div>
+                            </h2>
+                        <!--</div>-->
 
-                    </div>         
+                    <!--</div>         -->
                 </div>
             </div>
         </div>
