Reduce size of button with link to aggregate results table

--- a/templates/parallel_page.html
+++ b/templates/parallel_page.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-8">
                 <a href="a/">
-                    <div class="btn btn-primary btn-lg results-btn">
+                    <div class="btn btn-primary results-btn">
                         <h4><b>Общая таблица результатов</b></h4>
                     </div>
                 </a>
